Created WebSocket based Live Notifications with a JwtChannelInterceptor for authneticating STOMP Requests and Transaction based Event Listeners to ensure proper Notification Roll back upon Transaction failure,