@@ -1,15 +1,20 @@
 package com.jatin.forum.service;
 
+import com.jatin.forum.dto.NotificationCreatedEvent;
 import com.jatin.forum.dto.NotificationFeedResponse;
 import com.jatin.forum.dto.NotificationResponse;
 import com.jatin.forum.entity.*;
 import com.jatin.forum.repository.NotificationRepo;
 import com.jatin.forum.repository.UserRepo;
 import jakarta.transaction.Transactional;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.http.ResponseEntity;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.event.TransactionPhase;
+import org.springframework.transaction.event.TransactionalEventListener;
 
 import java.time.Instant;
 import java.util.List;
@@ -22,14 +27,17 @@ public class NotificationService {
 
     private final NotificationRepo notificationRepo;
     private final UserRepo userRepo;
+    private final ApplicationEventPublisher applicationEventPublisher;
 
-    public NotificationService(NotificationRepo notificationRepo, UserRepo userRepo) {
+    public NotificationService(NotificationRepo notificationRepo, UserRepo userRepo, ApplicationEventPublisher applicationEventPublisher) {
         this.notificationRepo = notificationRepo;
         this.userRepo = userRepo;
+        this.applicationEventPublisher = applicationEventPublisher;
     }
 
     // create a notification: method : as it is a command and not a query
     // -> void return type
+    @Transactional
     public void createNotification(Post post,User creator,NotificationType notificationType) {
     // Notification now received after upvote
         // check and verify
@@ -41,10 +49,29 @@ public class NotificationService {
             notification.setReceiverId(post.getUser().getId());
             notification.setPostId(post.getId());
             notification.setType(notificationType);
-            notificationRepo.save(notification);
+           Notification saved = notificationRepo.save(notification); // this returns a managed entity
+
+            NotificationCreatedEvent notificationCreatedEvent = getNotificationCreatedEvent(post, creator, saved);
+            // Event Published
+            applicationEventPublisher.publishEvent(notificationCreatedEvent);
+
         }
 
     }
+
+    private static NotificationCreatedEvent getNotificationCreatedEvent(Post post, User creator, Notification saved) {
+        NotificationResponse notificationResponse = new NotificationResponse
+                (creator.getUsername(),
+                  saved.getType(),
+                        saved.getCreatedAt(),
+                       saved.isRead(),
+                       saved.getPostId(),
+                        saved.getCommentId()
+                        );
+
+        return new NotificationCreatedEvent(post.getUser().getEmail(), notificationResponse);
+    }
+
 
     private static final int Max_Page_Size = 20;
 
@@ -78,7 +105,7 @@ public class NotificationService {
             responseList.remove(responseList.size()-1);
         }
 
-        Instant lastTimestamp = responseList.getLast().createdAt();
+        Instant lastTimestamp = responseList.get(responseList.size()-1).createdAt();
         return new NotificationFeedResponse(responseList,hasMore,lastTimestamp);
 
     }
@@ -97,6 +124,14 @@ public class NotificationService {
     }
 
 
-
-
+    public Integer countUnreadNotifications() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        String email = authentication.getName();
+        User user = userRepo.findByEmail(email);
+        if(user==null){
+            throw new IllegalArgumentException("User not found");
+        }
+        Long receiverId = user.getId();
+        return notificationRepo.countNotificationByReceiverIdAndReadIsFalse(receiverId, false);
+    }
 }
